--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
     "url": "git://github.com/sonny/mia-api.git"
   },
   "author": "sonny",
-  "license": ""
+  "license": "",
+  "devDependencies": {
+    "sails-hook-autoreload": "^0.12.0",
+    "sails-test-helper": "^0.4.4"
+  }
 }
