--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
   "devDependencies": {
     "sails-hook-autoreload": "^0.12.0",
     "sails-test-helper": "^0.4.4",
-    "should": "^7.1.0",
-    "superstack": "0.0.4"
+    "should": "^7.1.0"
   }
 }
