--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
     "pdf-text-extract": "^1.2.0",
+    "promise-map-series": "^0.2.2",
+    "q": "^1.4.1",
     "rc": "~0.5.0",
     "request": "^2.63.0",
     "sails": "~0.11.4",
