--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
     "pdf-text-extract": "^1.2.0",
+    "pkgcloud": "^1.3.0",
+    "q": "^1.4.1",
     "rc": "~0.5.0",
     "request": "^2.63.0",
     "sails": "~0.11.4",
     "sails-disk": "~0.10.0",
     "sails-mongo": "^0.11.4",
-    "spooky": "^0.2.5"
+    "spooky": "^0.2.5",
+    "textract": "^2.0.0"
   },
   "scripts": {
     "debug": "node debug app.js",
